--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -299,7 +299,7 @@
   }
 
   .contact__loc__phone__mail a {
-    font-family: Inter;
+    font-family: Lato;
     font-size: 16px;
     font-weight: bold;
     padding: 5px;
@@ -394,6 +394,8 @@
 
     .home__choose__us__body {
       display: flex;
+      gap: 20px;
+      margin: 0px 80px;
     }
 
     .home__choose__us__item {
@@ -575,27 +577,80 @@
     }
 
   }
-
+  .home__hero__text {
+    flex: 1;
+    padding: 50px 0px;
+  
+  }
+  .home__hero__text div{
+    padding: 30px 8%;
+    background-color: #112591;
+    display: flex;
+    justify-content: space-around;
+    /* width: fit-content; */
+    height: fit-content;
+  }
+  .home__hero__text div > h1{
+    color: var(--color-white);
+    font-family: Readex Pro;
+    font-weight: bolder;
+    font-size: 45px !important;
+    margin: 0px;
+    color: white;
+    text-align: center;
+  
+  }
+  .home__hero__text div > p {
+    color: var(--color-white);
+    font-family: Inter;
+    font-size: 28px;
+    padding-top: 10px;
+    margin: 0;
+  }
+  .home__hero__text > button {
+    display: flex;
+    align-items: center;
+    margin: 50px auto;
+    background: orange;
+    color: black;
+    padding: 10px 30px;
+    border-radius: 5px;
+    border: none;
+    font-size: 20px;
+    font-weight: lighter;
+  }
+  
   /* choose us */
 
   /* choose us */
   .home__choose__us__wrap {
-
-    /* background: url(/assets/img/test_bg.png); */
+    background-image: url(/assets/img/card__bg.png);
     padding: 50px 8%;
-    margin: 30px;
+    /* margin: 30px; */
     /* background-color: #1E45F5; */
   }
 
   .home__choose__us__item {
-    background-color: white;
+    background: #112591;
     box-shadow: inset;
     border-radius: 10px;
     margin: 5px;
+    padding: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    
+  }
+  .home__choose__us__item div h2{
+    font-family: Readex Pro;
+    /* color: #000000; */
+    color: #ffffff;
+  }
+  .home__choose__us__item div p{
+    font-family: Lato;
+    font-size: 16px;
+    color: rgba(255, 255, 255, 0.802);
   }
 
   .home__choose__us__item>img {
@@ -606,19 +661,32 @@
 }
 .intro__brief{
   display: flex;
-  margin: auto;
-  margin-top: 50px;
-  width: 80%;
   align-items: center;
+  padding: 50px 20%;
 }
 .intro__brief p{
-  /* font-family: Inter; */
-  padding-right: 50px;
-  width: 60%;
   font-weight: lighter;
-  font-size: 18px;
+  font-family: Montserrat;
+  font-size: 22px;
   text-align: justify;
+  
 }
-.intro__brief img{
-  width: 40%;
+.about__vision__mission{
+  background: white;
+  padding: 20px 0px;
+}
+.vission__mission{
+  display: flex;
+  padding: 20px 8%;
+  justify-content: space-around;
+
+}
+.vission__mission svg{
+
+}
+.vission__mission h4{
+  font-family: Montserrat;
+  font-size: 26px;
+  width: 50%;
+  color: black;
 }
