--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -248,6 +248,10 @@
     right: 0px;
     top: 80px;
     width: 100%;
+    background-color: #ffffff;
+  }
+  .header__nav.open a{
+    color: #112791;
   }
 
   .header__nav div {
