--- a/assets/css/hub.css
+++ b/assets/css/hub.css
@@ -3,25 +3,26 @@
   padding: 70px 8%;
 }
 .hub__hero__text {
-  width: fit-content;
-  display: flex;
-  margin: auto;
-
+  flex: 1;
+  padding: 50px 0px;
 }
-.hub__hero__text > h1{
+.hub__hero__text div{
+  padding: 30px 8%;
+  background-color: #112591;
+  display: flex;
+  justify-content: space-around;
+  /* width: fit-content; */
+  height: fit-content;
+}
+.hub__hero__text div > h1{
   color: var(--color-white);
   font-family: Readex Pro;
   font-weight: bolder;
   font-size: 45px !important;
   margin: 0px;
-  color: #112791;
-}
-.hub__hero__text > p {
-  color: var(--color-white);
-  font-family: Inter;
-  font-size: 28px;
-  padding-top: 10px;
-  margin: 0;
+  color: white;
+  text-align: center;
+
 }
 .hub__hero__text > button {
   display: flex;
@@ -38,11 +39,6 @@
 }
 .hub__hero__text > button > svg{
   height: 30px;
-}
-
-
-.hub__hero__text > h1 {
-  font-size: 48px;
 }
 
 .hub__hero__button {
@@ -69,8 +65,10 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 40px;
-  margin: 0px 10px;
-  padding: 50px 20%;
+  margin: 0px 15%;
+  padding: 50px 8%;
+  background-image: url(/assets/img/hub-banner0bg.png);
+  background-size: cover;
   
 }
 
@@ -101,12 +99,13 @@
   height: 100px;
 }
 .price__plans{
-  background-color: #112791;
   display: flex;
   justify-content: space-between;
   grid-template-columns: 1fr 1fr;
-  gap: 50px;
-  padding: 50px 30%;
+  gap: 30px;
+  padding: 50px 20%;
+  background-image: url(/assets/img/hub-banner0bg.png);
+  /* background-color: #f5f5f5; */
 }
 .price__plans__cards{
   border-radius: 5px;
@@ -114,14 +113,15 @@
   display: flex;
   flex-direction: column;
   text-align: left;
-  background-color: #ffffff;
+  background-color:#112591;
   height: 500px;
-  width: 400px;
+  width: 350px;
+  box-shadow: 4px 5px rgb(177, 177, 177);
 }
 .price__plans__cards h2{
   font-size: 25px;
   font-family: Readex Pro;
-  color: black;
+  color: rgb(227, 226, 226);
   margin: 10px 0;
   font-weight: bolder;
 
@@ -130,36 +130,63 @@
   font-size: 50px;
   font-family: Readex Pro;
   margin: 10px 0;
-  color: black;
+  color: white;
 }
 .price__plans__cards div h4{
-  font-size: 14px;
-  font-family: Open Sans;
-  color: rgb(45, 44, 44);
+  font-size: 16px;
+  color: rgb(227, 226, 226);
   margin:0;
-  margin-bottom: 5px;
+  margin-bottom: 8px;
 }
 .price__plans__cards span{
-  font-family: Readex Pro;
   font-size: 20px;
   font-weight:700;
-  color: black;
+  color: white;
   padding: 5px 0;
 }
 .bttm{
   height: fit-content;
   padding: 3px;
-  border-bottom: 4px solid grey;
+  border-bottom: 4px solid white;
 }
 .hub__hero{
-  margin: 20px 100px;
+  padding: 80px 8%;
   display: flex;
+  background-image: url(/assets/img/hub-bg.png);
 }
-.hub__hero h2{
-  font-family: Readex Pro;
-  font-size: 30px;
-}
+
 .hub__hero img{
   padding: 20px;
   width: 50%;
+}
+.hub__intro{
+  /* background-color: grey; */
+  width: 80%;
+}
+.hub__intro h2{
+  font-family: Readex Pro;
+  font-size: 40px;
+  color: white;
+}
+.hub__hero h4{
+  color: #ececec;
+  font-size: 24px;
+  font-family: Montserrat;
+  font-weight: 100;
+}
+.hub__hero img{
+  height: 50vh;
+}
+.hub__intro button{
+  background-color:#FF7A59;
+  color: white;
+  padding: 20px 40px;
+  font-family: Readex Pro;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+}
+.hub__intro button:hover{
+  cursor: pointer;
+  background-color:  #e97f14;
 }
