--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -196,7 +196,7 @@
   padding:10px 40px;
 }
 .request__us__header div h2, h4{
-  font-family: Readex Pro;
+  font-family: Montserrat;
   color: #112791;
 }
 .request__us__header div h2{
