--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -39,23 +39,26 @@
 .home__hero__text > button {
   display: flex;
   align-items: center;
-  margin: 50px;
-  background: none;
+  margin: 20px 5px;
+  background-color: #112791;
   border: 2px solid white;
   color: white;
-  padding: 5px 10px;
+  padding: 15px 20px;
   border-radius: 5px;
   font-size: 20px;
-  font-family: Inter;
-  font-weight: lighter;
+  font-family: Readex Pro;
+  font-weight: 400;
 }
-.home__hero__text > button > svg{
-  height: 30px;
+.home__hero__text > button:hover{
+  cursor: pointer;
+  background-color: #EFEFEF;
+  color: #112791;
+  transition: 0.45s;
 }
 
 
 .home__hero__text > h1 {
-  font-size: 48px;
+  font-size: 40px;
 }
 
  .home__hero__button {
@@ -181,17 +184,19 @@
   margin: 0px 0px;
   font-size: 20px;
   font-weight: lighter;
-  color: rgb(20, 19, 19);
+  color: #112791;
+  font-family;
 
 }
 .home__more__value__content > h4 {
   margin: 8px 0px;
   font-weight: bolder;
-  /* font-family: Readex Pro; */
-  color: rgb(20, 19, 19);
+  font-family: Readex Pro;
+  color: #112791;
   font-size: 25px;
   padding-bottom: 10px;
 }
+
 .home__section__work__process {
   background: url(/assets/img/bgs/just-blue.svg);
   height: fit-content;
@@ -633,14 +638,13 @@
   font-size: 28px;
 }
 .reverse_colors {
-
   padding: 0px 20px;
   /* padding-top: 50px; */
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: #1839CF;
+  background-color: #2346F5ef;
   overflow: hidden;
   width: 100%;
   height: 0;
@@ -648,12 +652,30 @@
 }
 
 
-.reverse_content > h1, p {
+.reverse_content > h2, p {
   color: white;
+
 }
-.reverse_colors > h1 {
+.reverse_colors > h2 {
   color: white;
+  font-family: Readex Pro;
+  text-align: left;
+  padding: 10px;
+  font-size: 18px;
 }
+.reverse_colors button {
+  background-color: white;
+  color: #112791;
+  border: none;
+  padding: 10px 15px;
+  font-family: Readex Pro;
+  bottom: 0%;
+}
+.reverse_colors button:hover{
+  cursor: pointer;
+  background-color: #efefef;
+}
+
 .service:hover .reverse_colors{
   height: 100%;
 }
@@ -799,6 +821,7 @@
 
 /* services cards */
 .m8__services{
+
   padding: 20px 20px;
   height: 400px;
   width: 250px;
@@ -811,8 +834,9 @@
 }
 .m8__services h1{
   margin: 50% 0;
-  font-size: 40px;
+  font-size: 30px;
   color: white;
+  font-family: Readex Pro;
 }
 .m8__services:hover .reverse_colors{
   height: 100%;
