--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -15,7 +15,7 @@
 
 .header_logo img {
   margin-left: 50px;
-  width: 10px;
+  /* width: 10px; */
 }
 .home__hero__text {
   flex: 1;
@@ -822,8 +822,8 @@
   grid-template-columns: 1fr 1fr 1fr;
   gap: 55px;
   margin: 0px 10px;
-  padding: 50px 10%;
-  padding-bottom: 100px;
+  padding: 20px 10% 20px 10%;
+ ;
 }
 .project__hero__text {
   flex: 1;
