--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -30,7 +30,8 @@ a {
   color: inherit;
   transition: all 0.4s ease-out;
   font-size: 16px;
-  color: var(--color-ligh);
+  /* color: var(--color-ligh); */
+  color;
 }
 .footer__links__list a:hover {
   color: var(--color-light);
