--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -649,6 +649,10 @@
   width: 100%;
   height: 0;
   transition: .5s ease;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 
@@ -670,6 +674,7 @@
   padding: 10px 15px;
   font-family: Readex Pro;
   bottom: 0%;
+  border-radius: 5px;
 }
 .reverse_colors button:hover{
   cursor: pointer;
@@ -821,22 +826,34 @@
 
 /* services cards */
 .m8__services{
-
-  padding: 20px 20px;
+  /* padding: 20px 20px; */
   height: 400px;
   width: 250px;
   margin: 0 auto;
   text-align: center;
-
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 .owl-stage{
   margin: auto;
 }
+
 .m8__services h1{
-  margin: 50% 0;
-  font-size: 30px;
+  position: absolute;
+  margin: auto;
+  font-size: 20px;
   color: white;
+  background-color: #0000fe;
+  padding: 20px 10px;
   font-family: Readex Pro;
+  bottom: 0%;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 .m8__services:hover .reverse_colors{
   height: 100%;
