--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Readex+Pro');
 @import url('https://fonts.googleapis.com/css?family=Lato');
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url("https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200&display=swap");
 
 :root {
   --color-primary: #0000fe;
