--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -33,7 +33,7 @@
 .home__hero__text div{
   /* margin-top: 120px; */
   padding: 30px 30px;
-  background-color: none !important;
+  background: none !important;
   display: flex;
   flex-direction: column;
   width: fit-content;
