--- a/assets/css/hub.css
+++ b/assets/css/hub.css
@@ -152,7 +152,7 @@
 .hub__hero{
   padding: 80px 8%;
   display: flex;
-  background-image: url(/assets/img/hub-bg.png);
+  background-image: url(/assets/img/hub-banner0bg.png);
   background-size: cover;
 }
 
@@ -161,33 +161,53 @@
   width: 50%;
 }
 .hub__intro{
-  /* background-color: grey; */
-  width: 80%;
+  padding: 30px 30px;
+  background: none !important;
+  display: flex;
+  flex-direction: column;
 }
-.hub__intro h2{
+
+.hub__intro h1{
+  color: var(--color-white);
   font-family: Readex Pro;
-  font-size: 40px;
-  color: white;
+  font-weight: bolder;
+  font-size: 45px !important;
+  margin: 0px;
+  color: #112591;
+  text-align: center;
 }
 .hub__hero h4{
-  color: #ececec;
-  font-size: 24px;
-  font-family: Montserrat;
-  font-weight: 100;
+  color: var(--color-white);
+  font-family: Readex Pro;
+  font-weight: 200;
+  font-size: 28px;
+  padding-top: 20px;
+  color: #112591;
+  margin: 0;  
+  text-align: center;
 }
 .hub__hero img{
   height: 50vh;
 }
-.hub__intro button{
-  background-color:#FF7A59;
+.hub__intro > button{
+  display: flex;
+  align-items: center;
+  margin: 20px 5px;
+  background-color: #112791;
+  border: 2px solid white;
   color: white;
-  padding: 20px 40px;
-  font-family: Readex Pro;
-  border: none;
+  padding: 15px 20px;
   border-radius: 5px;
-  font-size: 16px;
+  font-size: 20px;
+  font-family: Readex Pro;
+  font-weight: 400;
+  width: fit-content;
+  text-align: center;
 }
-.hub__intro button:hover{
+.hub__intro > button:hover{
   cursor: pointer;
-  background-color:  #e97f14;
+  background-color: #EFEFEF;
+  color: #112791;
+  transition: 0.45s;
+  border: 2px solid #112591;
 }
