--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -228,12 +228,13 @@
   background-color: #fff;
   border-radius: 5px;
   position: absolute;
-  top: 50%;
-  left: 25%;
-  transform: translate(-50%, -50%);
-  width: 40%;
+  bottom: 10px;
+  right: 10px;
+  /* transform: translate(-50%, -50%); */
+  width: fit-content;
   display: flex;
   flex-direction: column;
+  height: 90vh;
   align-items: center;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   animation-name: animatemodal;
