--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -206,9 +206,7 @@
 .home__section__work__process img{
   height: 80%;
 }
-.seprator img{ 
- margin: auto;
-}
+
 .home__section__work__process button{
   display: flex;
   align-items: center;
@@ -815,7 +813,9 @@
   border: none;
   margin: 0;
   border: 2px solid white;
-  border-radius: 50%;
+  border-radius: 100%;
+  width: auto;
+  height: auto;
 }
 .contact button:hover{
   cursor: pointer;
