--- a/assets/css/responcive.css
+++ b/assets/css/responcive.css
@@ -10,8 +10,14 @@
     width: 100% !important;
 }
 .home__hero__text > h1{
-    font-size: 30px !important;
+    font-size: 27px !important;
     text-align: center;
+}
+.home__hero__text div{
+    padding: 0%;
+}
+.work__process__content div h4{
+    font-size: 20px;
 }
 .services__heading h2{
     font-size: 35px !important;
