--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -804,9 +804,10 @@
 .contact{
   position: fixed;
   bottom: 10px;
-  right: 40px;
-  width: fit-content;
-  height: fit-content;
+  right: 50px;
+  width: 50px;
+  height: 50px;
+  z-index: 1000;
 }
 .contact button{
   background: #112791;
