--- a/assets/css/responcive.css
+++ b/assets/css/responcive.css
@@ -13,6 +13,18 @@
     font-size: 20px !important;
     text-align: center;
 }
+.home__more__value__content > h4{
+    text-align: center;
+    font-size: 20px !important;
+}
+.contact{
+    position: fixed;
+    bottom: 10px;
+    right: 50px;
+    width: 50px;
+    height: 50px;
+    z-index: 1000;
+  }
 .home__hero__text div{
     padding: 0%;
 }
@@ -82,8 +94,12 @@
     font-family: Readex Pro;
     font-weight: 400;
   }
+  .home__approach{
+      margin: 0;
+  }
   .home__approach h4{
       font-size: 20px;
+      padding: 10px;
   }
   .vission__mission{
       flex-direction: column;
