--- a/assets/css/responcive.css
+++ b/assets/css/responcive.css
@@ -165,7 +165,7 @@
     }
     .intro__brief p{
         width: 100% !important;
-        padding: 5px !important;
+        padding: 8% !important;
     }
     .intro__brief img{
         width: 80% !important;
