--- a/assets/css/responcive.css
+++ b/assets/css/responcive.css
@@ -17,14 +17,14 @@
     text-align: center;
     font-size: 20px !important;
 }
-.contact{
+/* .contact{
     position: fixed;
     bottom: 10px;
     right: 50px;
     width: 50px;
     height: 50px;
     z-index: 1000;
-  }
+  } */
 .home__hero__text div{
     padding: 0%;
 }
