--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -98,7 +98,7 @@
   /* background: url(../img/bgs/hero.svg); */
   height: 80px;
   z-index: -1;
-  box-shadow: 0.5px 0.5px 5px #d5d4d4, -0.5px -0.5px 5px #dcdada;
+  /* box-shadow: 0.5px 0.5px 5px #d5d4d4, -0.5px -0.5px 5px #dcdada; */
 
 }
 
